made chat display changes

--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
-
 div[class = "st-emotion-cache-1wmy9hl e1f1d6gn0"] div[data-testid="stVerticalBlock"]{
     width: 600px;
 }
 
+body {
+    background-color: black;
+}
+
+
+.Human{
+    float: right;
+}
 
 
 
